--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 		padding-left: 2em;
 		padding-right: 2em;
 		padding-bottom: 2em;
+		padding-top: 2em;
 	}
 	.forkme {
 		position: absolute;
@@ -95,7 +96,7 @@
 <p>Notes exported from Evernote via .enex files <a href="#importing-notes-from-evernote">can be imported</a> into Joplin, including the formatted content (which is converted to markdown), resources (images, attachments, etc.) and complete metadata (geolocation, updated time, created time, etc.).</p>
 <p>The notes can be <a href="#synchronisation">synchronised</a> with various targets including the file system (for example with a network directory) or with Microsoft OneDrive. When synchronising the notes, notebooks, tags and other metadata are saved to plain text files which can be easily inspected, backed up and moved around.</p>
 <p>The application is still under development but is out of Beta and should be suitable for every day use. The UI of the terminal client is built on top of the great <a href="https://github.com/cronvel/terminal-kit">terminal-kit</a> library, and the Android client front end is done using <a href="https://facebook.github.io/react-native/">React Native</a>.</p>
-<p><img src="https://github.com/laurent22/joplin/blob/master/docs/images/ScreenshotTerminal.png" alt="Joplin Terminal Screenshot"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/ScreenshotTerminal.png" alt="Joplin Terminal Screenshot"></p>
 <h1 id="installation">Installation</h1>
 <pre><code>npm install -g joplin
 </code></pre><p>To start it, type <code>joplin</code>.</p>
@@ -119,7 +120,7 @@
 </ul>
 <h1 id="usage">Usage</h1>
 <p>To start the application type <code>joplin</code>. This will open the user interface, which has three main panes: Notebooks, Notes and the text of the current note. There are also additional panels that can be toggled on and off via <a href="#available-shortcuts">shortcuts</a>.</p>
-<p><img src="https://github.com/laurent22/joplin/blob/master/docs/images/ScreenshotTerminalCaptions.png" height="450px"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/ScreenshotTerminalCaptions.png" height="450px"></p>
 <h2 id="input-modes">Input modes</h2>
 <p>Joplin user interface is partly based on the text editor Vim and offers two different modes to interact with the notes and notebooks:</p>
 <h3 id="normal-mode">Normal mode</h3>
@@ -211,10 +212,10 @@
 <p><a href='https://play.google.com/store/apps/details?id=net.cozic.joplin&utm_source=GitHub&utm_campaign=README&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' height="60px" src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></p>
 <h1 id="urls">URLs</h1>
 <p>When Ctrl+Clicking a URL, most terminals will open that URL in the default browser. However, one issue, especially with long URLs, is that they can end up like this:</p>
-<p><img src="https://github.com/laurent22/joplin/blob/master/docs/images/UrlCut.png" width="240px"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlCut.png" width="240px"></p>
 <p>Not only it makes the text hard to read, but the link, being cut in two, will also not be clickable.</p>
 <p>As a solution Joplin tries to start a mini-server in the background and, if successful, all the links will be converted to a much shorter URL:</p>
-<p><img src="https://github.com/laurent22/joplin/blob/master/docs/images/UrlNoCut.png" width="240px"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlNoCut.png" width="240px"></p>
 <p>Since this is still an actual URL, the terminal will still make it clickable. And with shorter URLs, the text is more readable and the links unlikely to be cut. Both resources (files that are attached to notes) and external links are handled in this way.</p>
 <h1 id="attachments-resources">Attachments / Resources</h1>
 <p>In Markdown, links to resources are represented as a simple ID to the resource. In order to give access to these resources, they will be, like links, converted to local URLs. Clicking this link will then open a browser, which will handle the file - i.e. display the image, open the PDF file, etc.</p>
