--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Joplin - a free, open source, note taking and to-do application with synchronisation capabilities</title>
+	<title>Joplin - a free, open source, 	te taking and to-do application with synchronisation capabilities</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +12,12 @@
 	body {
 		background-color: #F1F1F1;
 		color: #333333;
+	}
+	table {
+		margin-bottom: 1em;
+	}
+	td {
+		padding: .5em 1em .5em 0;
 	}
 	.title-icon {
 		height: 2em;
@@ -212,10 +218,10 @@
 <p><a href='https://play.google.com/store/apps/details?id=net.cozic.joplin&utm_source=GitHub&utm_campaign=README&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' height="60px" src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></p>
 <h1 id="urls">URLs</h1>
 <p>When Ctrl+Clicking a URL, most terminals will open that URL in the default browser. However, one issue, especially with long URLs, is that they can end up like this:</p>
-<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlCut.png" width="240px"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlCut.png" width="300px"></p>
 <p>Not only it makes the text hard to read, but the link, being cut in two, will also not be clickable.</p>
 <p>As a solution Joplin tries to start a mini-server in the background and, if successful, all the links will be converted to a much shorter URL:</p>
-<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlNoCut.png" width="240px"></p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/UrlNoCut.png" width="300px"></p>
 <p>Since this is still an actual URL, the terminal will still make it clickable. And with shorter URLs, the text is more readable and the links unlikely to be cut. Both resources (files that are attached to notes) and external links are handled in this way.</p>
 <h1 id="attachments-resources">Attachments / Resources</h1>
 <p>In Markdown, links to resources are represented as a simple ID to the resource. In order to give access to these resources, they will be, like links, converted to local URLs. Clicking this link will then open a browser, which will handle the file - i.e. display the image, open the PDF file, etc.</p>
