--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 	td, th {
 		padding: .5em 1em .5em 0;
 	}
+	h1 {
+		border-bottom: 1px solid #eaecef;
+		padding-bottom: 0.3em;
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+		font-weight: 600;
+		font-size: 2em;
+	}
 	.title-icon {
 		height: 2em;
 	}
