--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <li>Then repeat the process for each notebook that needs to be imported.</li>
 </ul>
 <h1 id="synchronisation">Synchronisation</h1>
-<p>One of the goal of Joplin was to avoid being tied to any particular company or service, whether it is Evernote, Google or Microsoft. As such the synchronisation is designed without any hard dependency to any particular service. Most of the synchronisation process is done at an abstract level and access to external services, such as OneDrive or Dropbox, is done via lightweight drivers. It is easy to support new services by creating simple drivers that provide a filesystem-like interface, i.e. the ability to read, write, delete and list items. It is also simple to switch from one service to another or to even sync to multiple services at once. Each note, notebook, tags, as well as the relation between items is transmitted as plain text files during synchronisation, which means the data can also be moved to a different application, can be easily backed up, inspected, etc.</p>
+<p>One of the goals of Joplin was to avoid being tied to any particular company or service, whether it is Evernote, Google or Microsoft. As such the synchronisation is designed without any hard dependency to any particular service. Most of the synchronisation process is done at an abstract level and access to external services, such as OneDrive or Dropbox, is done via lightweight drivers. It is easy to support new services by creating simple drivers that provide a filesystem-like interface, i.e. the ability to read, write, delete and list items. It is also simple to switch from one service to another or to even sync to multiple services at once. Each note, notebook, tags, as well as the relation between items is transmitted as plain text files during synchronisation, which means the data can also be moved to a different application, can be easily backed up, inspected, etc.</p>
 <p>Currently, synchronisation is possible with OneDrive (by default) or the local filesystem. A Dropbox driver will also be available once <a href="https://github.com/facebook/react-native/issues/14445">this React Native bug</a> is fixed. When syncing with OneDrive, Joplin creates a sub-directory in OneDrive, in /Apps/Joplin and read/write the notes and notebooks from it. The application does not have access to anything outside this directory.</p>
 <p>To initiate the synchronisation process, type <code>:sync</code>. You will be asked to follow a link to authorise the application (simply input your Microsoft credentials - you do not need to register with OneDrive). After that, the application will synchronise in the background whenever it is running. It is possible to also synchronise outside of the user interface by typing <code>joplin sync</code> from the terminal. This can be used to setup a cron script to synchronise at regular interval. For example, this would do it every 30 minutes:</p>
 <pre><code>*/30 * * * * /path/to/joplin sync
@@ -270,169 +270,165 @@ dn        Move the note to a notebook.
 <p>The following commands are available in <a href="#command-line-mode">command-line mode</a>:</p>
 <pre><code>attach &lt;note&gt; &lt;file&gt;
 
-    Joindre le fichier fourni à la note.
+    Attaches the given file to the note.
 
 config [name] [value]
 
-    Obtient ou modifie une valeur de configuration. Si la [valeur] n&#39;est pas 
-    fournie, la valeur de [nom] est affichée. Si ni le [nom] ni la [valeur] ne 
-    sont fournis, la configuration complète est affichée.
+    Gets or sets a config value. If [value] is not provided, it will show the 
+    value of [name]. If neither [name] nor [value] is provided, it will list 
+    the current configuration.
 
-    -v, --verbose  Afficher également les variables cachées.
+    -v, --verbose  Also displays unset and hidden config variables.
 
-Clefs/Valeurs possibles :
+Possible keys/values:
 
-    editor                 Editeur de texte.
-                           L&#39;éditeur de texte pour ouvrir et modifier les 
-                           notes. Si aucun n&#39;est spécifié, il sera détecté 
-                           automatiquement.
-                           Type : string.
+    editor                 Text editor.
+                           The editor that will be used to open a note. If 
+                           none is provided it will try to auto-detect the 
+                           default editor.
+                           Type: string.
 
-    locale                 Langue.
-                           Type : Enum.
-                           Valeurs possibles : en_GB (English), fr_FR 
-                           (Français).
-                           Défaut : &quot;en_GB&quot;
+    locale                 Language.
+                           Type: Enum.
+                           Possible values: en_GB (English), fr_FR (Français).
+                           Default: &quot;en_GB&quot;
 
-    sync.2.path            Cible de la synchronisation sur le disque dur.
-                           Le chemin du répertoire avec lequel synchroniser 
-                           lorsque la synchronisation par système de fichier 
-                           est activée. Voir `sync.target`.
-                           Type : string.
+    sync.2.path            File system synchronisation target directory.
+                           The path to synchronise with when file system 
+                           synchronisation is enabled. See `sync.target`.
+                           Type: string.
 
-    sync.interval          Interval de synchronisation.
-                           Type : Enum.
-                           Valeurs possibles : 0 (Désactivé), 300 (5 minutes), 
-                           600 (10 minutes), 1800 (30 minutes), 3600 (1 
-                           heure), 43200 (12 heures), 86400 (24 heures).
-                           Défaut : 300
+    sync.interval          Synchronisation interval.
+                           Type: Enum.
+                           Possible values: 0 (Disabled), 300 (5 minutes), 600 
+                           (10 minutes), 1800 (30 minutes), 3600 (1 hour), 
+                           43200 (12 hours), 86400 (24 hours).
+                           Default: 300
 
-    sync.target            Cible de la synchronisation.
-                           La cible avec laquelle synchroniser. Pour 
-                           synchroniser avec le système de fichier, veuillez 
-                           spécifier le répertoire avec `sync.2.path`.
-                           Type : Enum.
-                           Valeurs possibles : 1 (Memory), 2 (Système de 
-                           fichier), 3 (OneDrive).
-                           Défaut : 3
+    sync.target            Synchronisation target.
+                           The target to synchonise to. If synchronising with 
+                           the file system, set `sync.2.path` to specify the 
+                           target directory.
+                           Type: Enum.
+                           Possible values: 1 (Memory), 2 (File system), 3 
+                           (OneDrive).
+                           Default: 3
 
-    trackLocation          Enregistrer l&#39;emplacement avec les notes.
-                           Type : bool.
-                           Défaut : true
+    trackLocation          Save geo-location with notes.
+                           Type: bool.
+                           Default: true
 
-    uncompletedTodosOnTop  Tâches non-terminées en haut des listes.
-                           Type : bool.
-                           Défaut : true
+    uncompletedTodosOnTop  Show uncompleted todos on top of the lists.
+                           Type: bool.
+                           Default: true
 
 cp &lt;note&gt; [notebook]
 
-    Copie les notes correspondant à &lt;nom&gt; vers [carnet]. Si aucun carnet n&#39;est 
-    spécifié, la note est dupliquée sur place.
+    Duplicates the notes matching &lt;note&gt; to [notebook]. If no notebook is 
+    specified the note is duplicated in the current notebook.
 
 done &lt;note&gt;
 
-    Marquer la tâche comme complétée.
+    Marks a to-do as done.
 
 edit &lt;note&gt;
 
-    Editer la note.
+    Edit note.
 
 exit
 
-    Quitter le logiciel.
+    Exits the application.
 
 export &lt;directory&gt;
 
-    Exporter les données de Joplin vers le dossier fourni. Par défaut, la base 
-    de donnée complète sera exportée, y compris les carnets, notes, tags et 
-    resources.
+    Exports Joplin data to the given directory. By default, it will export the 
+    complete database including notebooks, notes, tags and resources.
 
-    --note &lt;note&gt;          Exporter uniquement la note spécifiée.
-    --notebook &lt;notebook&gt;  Exporter uniquement le carnet spécifié.
+    --note &lt;note&gt;          Exports only the given note.
+    --notebook &lt;notebook&gt;  Exports only the given notebook.
 
 geoloc &lt;note&gt;
 
-    Afficher l&#39;URL de l&#39;emplacement de la note.
+    Displays a geolocation URL for the note.
 
 help [command]
 
-    Affiche les informations d&#39;utilisation.
+    Displays usage information.
 
 import-enex &lt;file&gt; [notebook]
 
-    Importer un carnet Evernote (fichier .enex).
+    Imports an Evernote notebook file (.enex file).
 
-    -f, --force  Ne pas demander de confirmation.
+    -f, --force  Do not ask for confirmation.
 
 mkbook &lt;new-notebook&gt;
 
-    Créer un carnet.
+    Creates a new notebook.
 
 mknote &lt;new-note&gt;
 
-    Créer une note.
+    Creates a new note.
 
 mktodo &lt;new-todo&gt;
 
-    Créer une nouvelle tâche.
+    Creates a new to-do.
 
 mv &lt;note&gt; [notebook]
 
-    Déplacer les notes correspondant à &lt;note&gt; vers [notebook].
+    Moves the notes matching &lt;note&gt; to [notebook].
 
 ren &lt;item&gt; &lt;name&gt;
 
-    Renommer l&#39;objet &lt;item&gt; (note ou carnet) en &lt;name&gt;.
+    Renames the given &lt;item&gt; (note or notebook) to &lt;name&gt;.
 
 rmbook &lt;notebook&gt;
 
-    Supprimer le carnet.
+    Deletes the given notebook.
 
-    -f, --force  Supprimer le carnet sans demander la confirmation.
+    -f, --force  Deletes the notebook without asking for confirmation.
 
 rmnote &lt;note-pattern&gt;
 
-    Supprimer les notes correspondants à &lt;note-pattern&gt;.
+    Deletes the notes matching &lt;note-pattern&gt;.
 
-    -f, --force  Supprimer les notes sans demander la confirmation.
+    -f, --force  Deletes the notes without asking for confirmation.
 
 search &lt;pattern&gt; [notebook]
 
-    Chercher le motif &lt;pattern&gt; dans toutes les notes.
+    Searches for the given &lt;pattern&gt; in all the notes.
 
 status
 
-    Afficher un résumé des notes et carnets.
+    Displays summary about the notes and notebooks.
 
 sync
 
-    Synchroniser les notes et carnets.
+    Synchronises with remote storage.
 
-    --target &lt;target&gt;  Synchroniser avec la cible donnée (par défaut, la 
-                       valeur de configuration `sync.target`).
+    --target &lt;target&gt;  Sync to provided target (defaults to sync.target config 
+                       value)
     --random-failures  For debugging purposes. Do not use.
 
 tag &lt;tag-command&gt; [tag] [note]
 
-    &lt;tag-command&gt; peut être &quot;add&quot;, &quot;remove&quot; ou &quot;list&quot; pour assigner ou enlever 
-    l&#39;étiquette [tag] de la [note], our pour lister les notes associées avec 
-    l&#39;étiquette [tag]. La commande `tag list` peut être utilisée pour lister 
-    les étiquettes.
+    &lt;tag-command&gt; can be &quot;add&quot;, &quot;remove&quot; or &quot;list&quot; to assign or remove [tag] 
+    from [note], or to list the notes associated with [tag]. The command `tag 
+    list` can be used to list all the tags.
 
 todo &lt;todo-command&gt; &lt;note-pattern&gt;
 
-    Gère le status des tâches. &lt;todo-command&gt; peut être &quot;toggle&quot; ou &quot;clear&quot;. 
-    Utilisez &quot;toggle&quot; pour basculer la tâche entre le status terminé et 
-    non-terminé (Si la cible est une note, elle sera convertie en tâche). 
-    Utilisez &quot;clear&quot; pour convertir la tâche en note.
+    &lt;todo-command&gt; can either be &quot;toggle&quot; or &quot;clear&quot;. Use &quot;toggle&quot; to toggle 
+    the given to-do between completed and uncompleted state (If the target is 
+    a regular note it will be converted to a to-do). Use &quot;clear&quot; to convert 
+    the to-do back to a regular note.
 
 undone &lt;note&gt;
 
-    Marquer une tâche comme non-complétée.
+    Marks a to-do as non-completed.
 
 version
 
-    Affiche les informations de version
+    Displays version information
 </code></pre><h1 id="known-bugs">Known bugs</h1>
 <ul>
 <li>Non-alphabetical characters such as Chinese or Arabic might create glitches in the user interface on Windows. This is a limitation of the current Windows console.</li>
