--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 	h3 {
 		font-size: 1.3em;
 	}
+	code {
+		color: black;
+		background-color: #eee;
+		border: 1px solid #ccc;
+	}
+	pre code {
+		border: none;
+	}
 	.title-icon {
 		height: 2em;
 	}
