--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
 <pre><code>*/30 * * * * /path/to/joplin sync
 </code></pre><h1 id="android-client">Android client</h1>
 <p>An Android client is available and can synchronise with the terminal client via OneDrive:</p>
+<p><img src="https://raw.githubusercontent.com/laurent22/joplin/master/docs/images/Phone.png"></p>
 <p><a href='https://play.google.com/store/apps/details?id=net.cozic.joplin&utm_source=GitHub&utm_campaign=README&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img alt='Get it on Google Play' height="60px" src='https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png'/></a></p>
 <h1 id="urls">URLs</h1>
 <p>When Ctrl+Clicking a URL, most terminals will open that URL in the default browser. However, one issue, especially with long URLs, is that they can end up like this:</p>
@@ -458,6 +459,5 @@ version
 
 </script>
 
-<hr/>Copyright (c) 2016-2017 Laurent Cozic
 </body>
 </html>
