Changed export to module.exports

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ exit
 
     Exits the application.
 
-export &lt;directory&gt;
+module.exports = &lt;directory&gt;
 
     Exports Joplin data to the given directory. By default, it will export the 
     complete database including notebooks, notes, tags and resources.
