Started bridge between backend and frontend

--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <script src="app.js"></script>
   </head>
   <body>
     <h1>Hello World!</h1>
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+    <script>
+      //console.info(initApp);
+    </script>
   </body>
 </html>
