Started note list

--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -3,13 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Hello World!</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Hello World!</h1>
-		We are using node <script>document.write(process.versions.node)</script>,
-		Chrome <script>document.write(process.versions.chrome)</script>,
-		and Electron <script>document.write(process.versions.electron)</script>.
-		<div id="react-root"></div>
-		<script src="ReactRoot.min.js"></script>
+		<div  style="height: '1000px';" id="react-root"></div>
+		<script src="gui/Root.min.js"></script>
 	</body>
 </html>
