Created list that renders only currently visible items

--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<div  style="height: '1000px';" id="react-root"></div>
+		<div id="react-root"></div>
 		<script src="gui/Root.min.js"></script>
 	</body>
 </html>
