--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<div id="react-root"></div>
-		<script src="gui/Root.min.js"></script>
+		<!-- <script src="gui/Root.min.js"></script> -->
+		<script src="main-html.js"></script>
 	</body>
 </html>
