Prompt dialog and popup menu

--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello World!</title>
+		<title>Joplin</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<div id="react-root"></div>
-		<!-- <script src="gui/Root.min.js"></script> -->
 		<script src="main-html.js"></script>
 	</body>
 </html>
