--- a/ElectronClient/app/index.html
+++ b/ElectronClient/app/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Joplin</title>
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="css/ionicons.min.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
 	</head>
 	<body>
 		<div id="react-root"></div>
