Electron app: handle tags

--- a/ElectronClient/app/gui/note-viewer/index.html
+++ b/ElectronClient/app/gui/note-viewer/index.html
@@ -4,8 +4,10 @@ body {
 }
 
 #content {
-	overflow-y: scroll;
+	overflow-y: auto;
 	height: 100%;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 </style>
 
